InnoDB: make ALTER TABLE to work on table names containing '#' (Bug #5856)

innobase/dict/dict0dict.c:
  dict_strip_comments(): do not look for comments within quotes (Bug #5856)
innobase/row/row0mysql.c:
  row_drop_table_for_mysql(): Remove a memory leak